--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world </p>
+    <h1>fajar</h1>
+    <p>hello unaib </p>
 </body>
 </html>
