--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>fajar</h1>
-    <p>This is my learning.</p>
+    <p>working day.</p>
+    <p>Today is .</p>
+    gaming 
+    
 </body>
 </html>
